@@ -290,8 +290,10 @@ public class NamenodeFsck implements DataEncryptionKeyFactory {
           out.println("No. of live Replica: " + numberReplicas.liveReplicas());
           out.println("No. of excess Replica: " + numberReplicas.excessReplicas());
           out.println("No. of stale Replica: " + numberReplicas.replicasOnStaleNodes());
-          out.println("No. of decommission Replica: "
-              + numberReplicas.decommissionedReplicas());
+          out.println("No. of decommissioned Replica: "
+            + numberReplicas.decommissioned());
+          out.println("No. of decommissioning Replica: "
+            + numberReplicas.decommissioning());
           out.println("No. of corrupted Replica: " + numberReplicas.corruptReplicas());
           //record datanodes that have corrupted block replica
           Collection<DatanodeDescriptor> corruptionRecord = null;
@@ -532,15 +534,24 @@ public class NamenodeFsck implements DataEncryptionKeyFactory {
       String blkName = block.toString();
       DatanodeInfo[] locs = lBlk.getLocations();
       int liveReplicas = 0;
+      int decommissionedReplicas = 0;
+      int decommissioningReplicas = 0;
       if(lBlk.getBlock().getBlockId() < 0){ //small file stored in DB have non existing -ive block IDs
         liveReplicas = locs.length;
       }else{
-        liveReplicas = getNumLiveReplicas(block);
+        NumberReplicas numberReplicas = getNumReplicas(block);
+        liveReplicas = numberReplicas.liveReplicas();
+        decommissionedReplicas = numberReplicas.decommissioned();;
+        decommissioningReplicas = numberReplicas.decommissioning();
       }
-      res.totalReplicas += liveReplicas;
+      res.decommissionedReplicas +=  decommissionedReplicas;
+      res.decommissioningReplicas += decommissioningReplicas;
+      int totalReplicas = liveReplicas + decommissionedReplicas +
+          decommissioningReplicas;
+      res.totalReplicas += totalReplicas;
       short targetFileReplication = file.getReplication();
       res.numExpectedReplicas += targetFileReplication;
-      if(liveReplicas<minReplication){
+      if(totalReplicas < minReplication){
         res.numUnderMinReplicatedBlocks++;
       }
       if (liveReplicas > targetFileReplication) {
@@ -561,20 +572,21 @@ public class NamenodeFsck implements DataEncryptionKeyFactory {
             "\n" + path + ": CORRUPT blockpool " + block.getBlockPoolId() +
                 " block " + block.getBlockName() + "\n");
       }
-      if (liveReplicas >= minReplication) {
+      if (totalReplicas >= minReplication)
         res.numMinReplicatedBlocks++;
-      }
-      if (liveReplicas < targetFileReplication && liveReplicas > 0) {
-        res.missingReplicas += (targetFileReplication - liveReplicas);
+      if (totalReplicas < targetFileReplication && totalReplicas > 0) {
+        res.missingReplicas += (targetFileReplication - totalReplicas);
         res.numUnderReplicatedBlocks += 1;
         underReplicatedPerFile++;
         if (!showFiles) {
           out.print("\n" + path + ": ");
         }
         out.println(" Under replicated " + block +
-            ". Target Replicas is " +
-            targetFileReplication + " but found " +
-            liveReplicas + " replica(s).");
+                    ". Target Replicas is " +
+                    targetFileReplication + " but found " +
+                    liveReplicas + " live replica(s), " +
+                    decommissionedReplicas + " decommissioned replica(s) and " +
+                    decommissioningReplicas + " decommissioning replica(s).");
       }
 
       // verify block placement policy
@@ -593,7 +605,7 @@ public class NamenodeFsck implements DataEncryptionKeyFactory {
       }
 
       report.append(i + ". " + blkName + " len=" + block.getNumBytes());
-      if (liveReplicas == 0) {
+      if (totalReplicas == 0) {
         report.append(" MISSING!");
         res.addMissing(block.toString(), block.getNumBytes());
         missing++;
@@ -650,8 +662,8 @@ public class NamenodeFsck implements DataEncryptionKeyFactory {
     }
   }
 
-  private int getNumLiveReplicas(final ExtendedBlock block) throws IOException{
-    return (int) new HopsTransactionalRequestHandler(
+  private NumberReplicas getNumReplicas(final ExtendedBlock block) throws IOException{
+    return (NumberReplicas) new HopsTransactionalRequestHandler(
         HDFSOperationType.PROCESS_TIMEDOUT_PENDING_BLOCK) {
       INodeIdentifier inodeIdentifier;
 
@@ -676,8 +688,7 @@ public class NamenodeFsck implements DataEncryptionKeyFactory {
 
       @Override
       public Object performTask() throws IOException {
-        NumberReplicas numberReplicas = namenode.getNamesystem().getBlockManager().countNodes(block.getLocalBlock());
-        return numberReplicas.liveReplicas();
+        return namenode.getNamesystem().getBlockManager().countNodes(block.getLocalBlock());
 
       }
     }.handle();  
@@ -943,6 +954,8 @@ public class NamenodeFsck implements DataEncryptionKeyFactory {
     long corruptBlocks = 0L;
     long excessiveReplicas = 0L;
     long missingReplicas = 0L;
+    long decommissionedReplicas = 0L;
+    long decommissioningReplicas = 0L;
     long numUnderMinReplicatedBlocks=0L;
     long numOverReplicatedBlocks = 0L;
     long numUnderReplicatedBlocks = 0L;
@@ -1020,7 +1033,7 @@ public class NamenodeFsck implements DataEncryptionKeyFactory {
         res.append(" (Total open file blocks (not validated): ")
             .append(totalOpenFilesBlocks).append(")");
       }
-      if (corruptFiles > 0 || numUnderMinReplicatedBlocks>0) {
+      if (corruptFiles > 0 || numUnderMinReplicatedBlocks > 0) {
         res.append("\n  ********************************");
         if(numUnderMinReplicatedBlocks>0){
           res.append("\n  UNDER MIN REPL'D BLOCKS:\t").append(numUnderMinReplicatedBlocks);
@@ -1082,6 +1095,14 @@ public class NamenodeFsck implements DataEncryptionKeyFactory {
         res.append(" (").append(
             ((float) (missingReplicas * 100) / (float) numExpectedReplicas))
             .append(" %)");
+      }
+      if (decommissionedReplicas > 0) {
+        res.append("\n DecommissionedReplicas:\t").append(
+            decommissionedReplicas);
+      }
+      if (decommissioningReplicas > 0) {
+        res.append("\n DecommissioningReplicas:\t").append(
+            decommissioningReplicas);
       }
       return res.toString();
     }
